--- a/package.json
+++ b/package.json
@@ -2,11 +2,25 @@
   "name": "new",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Massamba-Bienvenu/node_mongo_app.git"
+  },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Massamba-Bienvenu/node_mongo_app/issues"
+  },
+  "homepage": "https://github.com/Massamba-Bienvenu/node_mongo_app#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.6"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
